    in sb-bsd-sockets.
  * bug fix: if COMPILE-FILE aborts due to an unwind, the partial
    fasl is now deleted. (reported by Attila Lendvai)
  * bug fix: READ-LINE always returned NIL for the last line in files.
    (reported by Yoshinori Tahara)
  * bug fix: more accurate disassembly annotations of foreign function
    calls.  (thanks to Andy Hefner)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** NIL is a valid function name (regression at 1.0.13.38)
    ** FILL on lists was missing its return value (regression at 1.0.12.27)
    ** STRING-TRIM, STRING-LEFT-TRIM, and STRING-RIGHT-TRIM did not respect
       fill pointers properly (regression at 1.0.12.23)
    ** STRING-TRIM, STRING-LEFT-TRIM, and STRING-RIGHT-TRIM did not respect
       displacement indices properly (regression at 1.0.12.23)   

changes in sbcl-1.0.17 relative to 1.0.16:
  * temporary regression: user code can no longer allocate closure
    variable storage on stack, due to bug 419 without explicitly
    requesting it. Please consult sbcl-devel for advice if you need to
    use this feature in the meanwhile.
  * new feature: runtime argument --control-stack-size can be used to
    adjust thread default control stack size.
  * enhancement: improved TIME output
    ** all times are reported using the measured accuracy (milliseconds
       for real and GC times, microseconds for everything else.)
    ** processor cycle counts on x86 and x86-64.
    ** interpreted forms are counted for both evaluator modes.
    ** number of lambdas converted by the compiler is reported.
    ** CPU percentage report (computed from real and total run time.)
    ** more comprehensive run time reporting, using a condenced format
    ** interperted form, lambda, and page fault counts are omitted
       when zero.
  * optimization: ADJOIN and PUSHNEW are upto ~70% faster in normal
    SPEED policies.
  * optimization: APPEND is upto ~10% faster in normal SPEED policies.